--- a/FrontBackmatter/Declaration.tex
+++ b/FrontBackmatter/Declaration.tex
@@ -5,7 +5,12 @@
 \pdfbookmark[0]{Declaration}{declaration}
 \chapter*{Declaration}
 \thispagestyle{empty}
-Put your declaration here.
+\draftnote{
+I declare that I have developed and written the enclosed Bachelor Thesis completely by myself, and have not used sources or means without declaration in the text.
+Any thoughts from others or literal quotations are clearly marked.
+The Bachelor Thesis was not used in the same or in a similar version to achieve an academic grading or is being published elsewhere.\\
+http://www.wiwiss.uni-jena.de/wiwimedia/Dokumente/Fakultaet/Zentrale\_Einrichtungen/Pruefungsamt/Statutory+Declaration.pdf
+}
 \bigskip
  
 \noindent\textit{\myLocation, \myTime}
