--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -4,9 +4,9 @@
 %
 % Copyright (C) 2015 André Miede http://www.miede.de
 %
-% If you like the style then I would appreciate a postcard. My address 
-% can be found in the file ClassicThesis.pdf. A collection of the 
-% postcards I received so far is available online at 
+% If you like the style then I would appreciate a postcard. My address
+% can be found in the file ClassicThesis.pdf. A collection of the
+% postcards I received so far is available online at
 % http://postcards.miede.de
 %
 % License:
@@ -86,12 +86,7 @@
 \include{Chapters/Polly}
 
 \cleardoublepage
-\ctparttext{You can put some informational part preamble text here. 
-Illo principalmente su nos. Non message \emph{occidental} angloromanic
-da. Debitas effortio simplificate sia se, auxiliar summarios da que,
-se avantiate publicationes via. Pan in terra summarios, capital
-interlingua se que. Al via multo esser specimen, campo responder que
-da. Le usate medical addresses pro, europa origine sanctificate nos se.}
+\ctparttext{\draftnote{Some additional text describing the study}}
 \part{Empirical Study}
 \include{Chapters/EmpirischeStudie}
 %\addtocontents{toc}{\protect\clearpage} % <--- just debug stuff, ignore
