Extend subject programs table

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -2,6 +2,7 @@
 \usepackage{comment}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{minted} % should be added before scrhack %newfloat now working
+\usepackage{ltablex}
 \usepackage{wrapfig}
 \usepackage{smartdiagram}
 \usesmartdiagramlibrary{additions}
