--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -10,7 +10,8 @@
 
 \chapter*{Abstract}
 \draftnote{
-    This document is examining the sizes and the ratio of the parts which can be automatically optimized by Polly, the reasons why bigger ones are rejected and what would be the theoretical impact if they would not be rejected.
+    This document is examining the ratio of the parts which can be automatically optimized by Polly.
+    Further the reasons why larger parts are rejected and the theoretical impact if they would not be rejected.
 }
 \begin{comment}
     Short summary of the contents in English\dots a great guide by Kent Beck how to write good abstracts can be found here:
@@ -25,7 +26,8 @@
     \pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
     \chapter*{Zusammenfassung}
     \draftnote{
-    Dieses Dokument beschäftigt sich mit der Größe und dem Anteil der durch Polly automatisch optimierbaren Bereiche, mit den Gründen, warum diese nicht noch größer sind, und mit der Frage, wie groß die Auswirkungen sein können, wenn dies der Fall wäre.
+    Dieses Dokument beschäftigt sich mit dem Anteil der durch Polly automatisch optimierbaren Bereiche.
+    Darüber hinaus wird der Frage nachgegangen, mit welchen Gründen größere Bereiche abgelehnt werden und auch mit den theoritischen Auswirkungen, wenn diese erkannt worden wären.
     }
 \end{otherlanguage}
 
