--- a/references.bib
+++ b/references.bib
@@ -39,7 +39,7 @@
     title={The Potential of Polyhedral Optimization: An Empirical Study},
     year={2013},
     url={http://www.infosun.fim.uni-passau.de/publications/docs/SAG+13.pdf},
-    urldate={2017-07-25}
+    urldate={2017-08-03}
 }
 @online{
     LLVMWebsite,
@@ -111,6 +111,13 @@
     author={Aaron Michalove},
     url={http://home.wlu.edu/~whaleyt/classes/parallel/topics/amdahl.html},
     urldate={2017-07-30}
+}
+@online{
+    AmdahlsLawJenkov,
+    title={Amdahl's Law},
+    author={Jakob Jenkov},
+    url={http://tutorials.jenkov.com/java-concurrency/amdahls-law.html},
+    urldate={2017-08-03}
 }
 @misc{
     GanserIterativeSchedule,
