--- a/FrontBackmatter/Declaration.tex
+++ b/FrontBackmatter/Declaration.tex
@@ -5,14 +5,14 @@
 \pdfbookmark[0]{Declaration}{declaration}
 \chapter*{Declaration}
 \thispagestyle{empty}
-\draftnote{
-I declare that I have developed and written the enclosed Bachelor Thesis completely by myself, and have not used sources or means without declaration in the text.
-Any thoughts from others or literal quotations are clearly marked.
-The Bachelor Thesis was not used in the same or in a similar version to achieve an academic grading or is being published elsewhere.\\
-http://www.wiwiss.uni-jena.de/wiwimedia/Dokumente/Fakultaet/Zentrale\_Einrichtungen/Pruefungsamt/Statutory+Declaration.pdf
-}
+I, \myName, hereby certify that this bachelor thesis has been composed by myself and de-
+scribes my own work unless otherwise stated.  All references and verbatim extracts have been
+quoted and all sources of information have been specically acknowledged.  In addition, this
+thesis has not been accepted in any previous application for a degree.\\
+\\
+Hiermit versichere ich, \myName, dass ich diese Diplomarbeit selbsständig und ohne Benutzunganderer als der angegebenen Quellen und Hilfsmittel angefertigt habe und alle Aus-führungen, die wörtlich oder sinngemäß übernommen wurden, als solche gekennzeich-net sind, sowie dass ich diese Diplomarbeit in gleicher oder ähnlicher Form noch keineranderen Prüfungsbehörde vorgelegt habe.
 \bigskip
- 
+
 \noindent\textit{\myLocation, \myTime}
 
 \smallskip
