Extend history of Polly (#14); Improve definition of SCoP (#15)

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -79,6 +79,7 @@
     \chapter*{Acronyms}
     \begin{acronym}[UMLX]
         \acro{CFG}{the Control Flow Graph}
+        \acro{IR}{Intermediate Representation}
         \acro{LLVM}{The Low Level Virtual Machine}
         \acro{LLVM-IR}{the LLVM Intermediate Representation}
         \acro{SCoP}{Static Control Part/Program}
