--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -355,6 +355,7 @@
 
 %Shortcuts
 \newcommand{\cfg}{\ac{CFG} }
+\newcommand{\ir}{\ac{IR} }
 \newcommand{\scop}{\ac{SCoP} }
 \newcommand{\scops}{\ac{SCoP}s }
 \newcommand{\llvmir}{\ac{LLVM-IR} }
