Add a bunch of draftnotes

--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -13,12 +13,15 @@
     This document is examining the ratio of the parts which can be automatically optimized by Polly.
     Further the reasons why larger parts are rejected and the theoretical impact if they would not be rejected.
 }
-\begin{comment}
-    Short summary of the contents in English\dots a great guide by Kent Beck how to write good abstracts can be found here:
-    \begin{center}
-    \url{https://plg.uwaterloo.ca/~migod/research/beckOOPSLA.html}
-    \end{center}
-\end{comment}
+
+\draftnote{
+    \begin{itemize}
+        \item Plakative Stichworte
+        \item Kalauer?
+        \item Ausblick
+        \item Ergebnis
+    \end{itemize}
+}
 
 \vfill
 
