--- a/references.bib
+++ b/references.bib
@@ -126,3 +126,8 @@
     url={https://www.infosun.fim.uni-passau.de/publications/docs/GGS+17.pdf},
     year={2017}
 }
+@misc{
+    FIMLogo,
+    url={http://www.infosun.fim.uni-passau.de/spl/images/UniFIM.png},
+    urldate={2017-08-17}
+}
