Extend Polly futher #14

--- a/references.bib
+++ b/references.bib
@@ -112,13 +112,6 @@
     url={http://home.wlu.edu/~whaleyt/classes/parallel/topics/amdahl.html},
     urldate={2017-07-30}
 }
-@online{
-    AmdahlsLawJenkov,
-    title={Amdahl's Law},
-    author={Jakob Jenkov},
-    url={http://tutorials.jenkov.com/java-concurrency/amdahls-law.html},
-    urldate={2017-08-03}
-}
 @misc{
     GanserIterativeSchedule,
     title={Iterative Schedule Optimization for Parallelization in the Polyhedron Model},
@@ -128,6 +121,33 @@
 }
 @misc{
     FIMLogo,
+    title={Logo of FIM University Passau},
     url={http://www.infosun.fim.uni-passau.de/spl/images/UniFIM.png},
+    urldate={2017-08-17}
+}
+@online{
+    GrosserGraphite,
+    title={Optimization opportunities based on the polyhedral model in GRAPHITE},
+    author={Tobias Grosser},
+    url={http://www.grosser.es/publications/grosser-2009-Optimization-opportunities-in-graphite-GCC-Summit.pdf},
+    urldate={2017-08-17}
+}
+@misc{
+    gccGimple,
+    title={GIMPLE - GCC Wiki},
+    url={https://gcc.gnu.org/wiki/GIMPLE},
+    urldate={2017-08-17}
+}
+@misc{
+    gccGraphite,
+    title={GRAPHITE - GCC Wiki},
+    url={https://gcc.gnu.org/wiki/Graphite},
+    urldate={2017-08-17}
+}
+@online{
+    GrosserGraphiteDesign,
+    title={Design of Graphite and the Polyhedral Compilation Package},
+    author={Jan Sjödin and Sebastian Pop and Harsha Jagasin and Tobias Grosser and Antoniu Pop},
+    url={http://www.grosser.es/publications/grosser-2009-Design-of-Graphite-and-the-Polyhedral-Compilation-Package-GCC-Summit.pdf},
     urldate={2017-08-17}
 }
