Add even more notes about structure according to the work about empirical studies

--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -14,12 +14,28 @@
     Further the reasons why larger parts are rejected and the theoretical impact if they would not be rejected.
 }
 
-\draftnote{
+\begin{comment}
     \begin{itemize}
         \item Plakative Stichworte
         \item Kalauer?
         \item Ausblick
         \item Ergebnis
+    \end{itemize}
+\end{comment}
+\draftnote{
+    \begin{itemize}
+        \item Background: Give a brief introducing notice about the motivation for conducting the study.
+        \item Objective: Describe the aim of the study, including the object under examination, the focus, and the perspective.
+        \item Method: Describe which research method was used to examine the object (e.g., experimental design, number and kind of participants, selection criteria, data collection and analysis procedures).
+        \item Results: Describe the main findings.
+        \item Limitations: Describe the major limitations of the research, if any.
+        \item Conclusion: Describe the impact of the results.
+        \item lengths:
+            \begin{itemize}
+                \item background: one sentence
+                \item important elements: objective, method, result and conclusion
+            \end{itemize}
+        \item keywords
     \end{itemize}
 }
 
