--- a/FrontBackmatter/Titleback.tex
+++ b/FrontBackmatter/Titleback.tex
@@ -4,20 +4,20 @@
 
 \vfill
 
-\noindent\myName: \textit{\myTitle,} \mySubtitle, %\myDegree, 
+\noindent\myName (\myEmail): \textit{\myTitle,} \mySubtitle, %\myDegree,
 \textcopyright\ \myTime
 
-%\bigskip
-%
-%\noindent\spacedlowsmallcaps{Supervisors}: \\
-%\myProf \\
-%\myOtherProf \\ 
-%\mySupervisor
-%
-%\medskip
-%
-%\noindent\spacedlowsmallcaps{Location}: \\
-%\myLocation
+\bigskip
+
+\noindent\spacedlowsmallcaps{Supervisors}: \\
+\myProf \\
+%\myOtherProf \\
+\mySupervisor
+
+\medskip
+
+\noindent\spacedlowsmallcaps{Location}: \\
+\myLocation
 %
 %\medskip
 %
