--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -54,7 +54,8 @@
 \newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
 \newcommand{\myDegree}{Nahe am Bachelor\xspace}
 \newcommand{\myName}{Stefan Huber\xspace}
-\newcommand{\myProf}{Put name here\xspace}
+\newcommand{\myEmail}{stefan.huber.niedling@outlook.com\xspace}
+\newcommand{\myProf}{Christian Lengauer\xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
 \newcommand{\mySupervisor}{Andreas Simbürger\xspace}
 \newcommand{\myFaculty}{Fakultät für Informatik und Mathematik\xspace}
