Precise history of Polly. (#14)

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -80,8 +80,10 @@
     \begin{acronym}[UMLX]
         \acro{CFG}{the Control Flow Graph}
         \acro{IR}{Intermediate Representation}
+        \acro{GPoly}{Graphite polytope description}
         \acro{LLVM}{The Low Level Virtual Machine}
         \acro{LLVM-IR}{the LLVM Intermediate Representation}
+        \acro{PCP}{the Polyhedral Compilation Package}
         \acro{SCoP}{Static Control Part/Program}
         \acro{SSA}{Static Single-assignment}
     \end{acronym}
