--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -356,14 +356,16 @@
 
 %Shortcuts
 \newcommand{\cfg}{\ac{CFG} }
+\newcommand{\generator}{LLVM Code Generator }
+\newcommand{\gpoly}{\ac{GPoly} }
 \newcommand{\ir}{\ac{IR} }
-\newcommand{\scop}{\ac{SCoP} }
-\newcommand{\scops}{\ac{SCoP}s }
+\newcommand{\linker}{LLVM Linker }
 \newcommand{\llvmir}{\ac{LLVM-IR} }
 \newcommand{\llvm}{\ac{LLVM} }
 \newcommand{\opt}{LLVM Optimizer }
-\newcommand{\generator}{LLVM Code Generator }
-\newcommand{\linker}{LLVM Linker }
+\newcommand{\pcp}{\ac{PCP} }
+\newcommand{\scop}{\ac{SCoP} }
+\newcommand{\scops}{\ac{SCoP}s }
 
 %temporary commands while drafting
 \newcommand{\draftnote}[1]{\textit{\textbf{\textcolor{red}{#1}}}}
