Add title and translate some settings

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -50,17 +50,17 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{A Classic Thesis Style\xspace}
-\newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
+\newcommand{\myTitle}{Boundaries of polyhedarl compilation\xspace}
+\newcommand{\mySubtitle}{An empirical study\xspace}
 \newcommand{\myDegree}{Nahe am Bachelor\xspace}
 \newcommand{\myName}{Stefan Huber\xspace}
 \newcommand{\myEmail}{stefan.huber.niedling@outlook.com\xspace}
 \newcommand{\myProf}{Christian Lengauer\xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
 \newcommand{\mySupervisor}{Andreas Simbürger\xspace}
-\newcommand{\myFaculty}{Fakultät für Informatik und Mathematik\xspace}
+\newcommand{\myFaculty}{Faculty for Computer Science and Mathematics\xspace}
 \newcommand{\myDepartment}{Department\xspace}
-\newcommand{\myUni}{Universität Passau\xspace}
+\newcommand{\myUni}{University Passau\xspace}
 \newcommand{\myLocation}{Passau\xspace}
 \newcommand{\myTime}{September 2017\xspace}
 \newcommand{\myVersion}{version 1\xspace}
