--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -50,7 +50,7 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{Boundaries of polyhedarl compilation\xspace}
+\newcommand{\myTitle}{Boundaries of polyhedral compilation\xspace}
 \newcommand{\mySubtitle}{An empirical study\xspace}
 \newcommand{\myDegree}{Nahe am Bachelor\xspace}
 \newcommand{\myName}{Stefan Huber\xspace}
