--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -78,7 +78,7 @@
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
     \chapter*{Acronyms}
     \begin{acronym}[UMLX]
-        \acro{CFG}{the Control Flow Graph}
+        \acro{CFG}{Control Flow Graph}
         \acro{IR}{Intermediate Representation}
         \acro{GPoly}{Graphite polytope description}
         \acro{LLVM}{The Low Level Virtual Machine}
