--- a/references.bib
+++ b/references.bib
@@ -151,3 +151,10 @@
     url={http://www.grosser.es/publications/grosser-2009-Design-of-Graphite-and-the-Polyhedral-Compilation-Package-GCC-Summit.pdf},
     urldate={2017-08-17}
 }
+@online{
+    GenericGimple,
+    title={GENERIC and GIMPLE: A New Tree Representation for Entire Functions},
+    author={Jason Merrill},
+    url={ftp://gcc.gnu.org/pub/gcc/summit/2003/GENERIC\%20and\%20GIMPLE.pdf},
+    urldate={2017-09-20}
+}
