Dont insert legend in order to investigate #27

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -387,7 +387,7 @@
     \begin{tikzpicture}
 }{
     \end{tikzpicture}\\
-    \legend
+    %\legend %FIXME Legend increasing table number
 }
 
 %Shortcuts
