Improve motivation; closes #9

--- a/references.bib
+++ b/references.bib
@@ -158,3 +158,21 @@
     url={ftp://gcc.gnu.org/pub/gcc/summit/2003/GENERIC\%20and\%20GIMPLE.pdf},
     urldate={2017-09-20}
 }
+@misc{
+    TheNameOfLLVM,
+    title={[LLVM Dev] The name of LLVM},
+    author={Chris Lattner},
+    url={http://lists.llvm.org/pipermail/llvm-dev/2011-December/046445.html},
+    howpublished={Mailing List},
+    year={2011},
+    month={December}
+}
+@url{
+    LLVMUsers,
+    title={LLVM Users},
+    author={llvm.org},
+    url={http://llvm.org/Users.html},
+    year={2009},
+    month={November},
+    urldate={2017-09-26}
+}
