--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -81,9 +81,9 @@
         \acro{CFG}{Control Flow Graph}
         \acro{IR}{Intermediate Representation}
         \acro{GPoly}{Graphite polytope description}
-        \acro{LLVM}{The Low Level Virtual Machine}
+        \acro{LLVM}{Low Level Virtual Machine (This is the originally contemplated name \cite{TheNameOfLLVM})}
         \acro{LLVM-IR}{the LLVM Intermediate Representation}
-        \acro{PCP}{the Polyhedral Compilation Package}
+        \acro{PCP}{Polyhedral Compilation Package}
         \acro{SCoP}{Static Control Part/Program}
         \acro{SSA}{Static Single-assignment}
     \end{acronym}
