Add references to other frontends besides clang

--- a/references.bib
+++ b/references.bib
@@ -164,3 +164,30 @@
     month={November},
     urldate={2017-09-26}
 }
+@online{
+    pyllvm,
+    author={Anna Herlihy},
+    title={PythonLLVM},
+    url={https://github.com/aherlihy/PythonLLVM}
+}
+@online{
+    rubyllvm,
+    title={ruby-llvm},
+    url={https://github.com/ruby-llvm/ruby-llvm}
+}
+@online{
+    luallvm,
+    title={LLVM Lua},
+    author={Robert Gabriel Jakabosky},
+    url={http://lua-users.org/wiki/LlvmLua}
+}
+@online{
+    fortranllvm,
+    title={flang},
+    url={https://github.com/flang-compiler/flang}
+}
+@online{
+    dragonegg,
+    title={DragonEgg - Using LLVM as a GCC backend},
+    url={http://dragonegg.llvm.org/}
+}
