--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -392,17 +392,17 @@
 }
 
 %Shortcuts
-\newcommand{\cfg}{\ac{CFG} }
-\newcommand{\generator}{LLVM Code Generator }
-\newcommand{\gpoly}{\ac{GPoly} }
-\newcommand{\ir}{\ac{IR} }
-\newcommand{\linker}{LLVM Linker }
-\newcommand{\llvmir}{\ac{LLVM-IR} }
-\newcommand{\llvm}{\ac{LLVM} }
-\newcommand{\opt}{LLVM Optimizer }
-\newcommand{\pcp}{\ac{PCP} }
-\newcommand{\scop}{\ac{SCoP} }
-\newcommand{\scops}{\ac{SCoP}s }
+\newcommand{\cfg}{\ac{CFG}\xspace}
+\newcommand{\generator}{LLVM Code Generator\xspace}
+\newcommand{\gpoly}{\ac{GPoly}\xspace}
+\newcommand{\ir}{\ac{IR}\xspace}
+\newcommand{\linker}{LLVM Linker\xspace}
+\newcommand{\llvmir}{\ac{LLVM-IR}\xspace}
+\newcommand{\llvm}{\ac{LLVM}\xspace}
+\newcommand{\opt}{LLVM Optimizer\xspace}
+\newcommand{\pcp}{\ac{PCP}\xspace}
+\newcommand{\scop}{\ac{SCoP}\xspace}
+\newcommand{\scops}{\ac{SCoP}s\xspace}
 
 %temporary commands while drafting
 \newcommand{\draftnote}[1]{\textit{\textbf{\textcolor{red}{#1}}}}
