Capitalize title and subtitle

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -51,8 +51,8 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{Boundaries of polyhedral compilation\xspace}
-\newcommand{\mySubtitle}{An empirical study\xspace}
+\newcommand{\myTitle}{Boundaries of Polyhedral Compilation\xspace}
+\newcommand{\mySubtitle}{An Empirical Study\xspace}
 \newcommand{\myDegree}{Nahe am Bachelor\xspace}
 \newcommand{\myName}{Stefan Huber\xspace}
 \newcommand{\myEmail}{stefan.huber.niedling@outlook.com\xspace}
