Remove additional text on part page

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -86,7 +86,7 @@
 \include{Chapters/Polly}
 
 \cleardoublepage
-\ctparttext{\draftnote{Some additional text describing the study}}
+%\ctparttext{\draftnote{Some additional text describing the study}}
 \part{Empirical Study}
 \include{Chapters/EmpirischeStudie}
 %\addtocontents{toc}{\protect\clearpage} % <--- just debug stuff, ignore
