--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -331,35 +331,6 @@
 }
 
 %Another idea for a lenged
-\begin{comment}
-    \begin{mdframed}
-        \begin{tikzpicture}
-            \tikzstyle{every node}=[font=\footnotesize]
-            \coordinate (firstRowCenter);
-            \coordinate[left=of firstRowCenter] (firstRowLeft);
-            \coordinate[right=of firstRowCenter] (firstRowRight);
-            \path[llvmIrPath] (firstRowLeft) to (firstRowRight);
-            \node[legendNode, right=of firstRowRight] {Passing LLVM-IR};
-
-            \node[llvmIrNode, below=of firstRowCenter] (secondRowCenter) {Node};
-            \coordinate[left=of secondRowCenter] (secondRowLeft);
-            \coordinate[right=of secondRowCenter] (secondRowRight);
-            \node[legendNode, right=of secondRowRight] {Node using LLVM-IR};
-
-            \coordinate[below=of secondRowCenter] (thirdRowCenter);
-            \coordinate[left=of thirdRowCenter] (thirdRowLeft);
-            \coordinate[right=of thirdRowCenter] (thirdRowRight);
-            \path[nonLlvmIrPath] (thirdRowLeft) to (thirdRowRight);
-            \node[legendNode, right=of thirdRowRight] {Passing non-LLVM-IR};
-
-            \node[nonLlvmIrNode, below=of thirdRowCenter] (fourthRowCenter) {Node};
-            \coordinate[left=of fourthRowCenter] (fourthRowLeft);
-            \coordinate[right=of fourthRowCenter] (fourthRowRight);
-            \node[legendNode, right=of fourthRowRight] {Node not using LLVM-IR};
-        \end{tikzpicture}
-    \end{mdframed}
-\end{comment}
-
 \newcommand{\legend}[0]{
     \begin{table}[H]
         \myfloatalign
@@ -392,11 +363,11 @@
 }
 
 %Create pie chart
-\newcommand{\piechart}[1]{
+\newcommand{\piechart}[3]{
     \par
     \def\angle{0}
     \def\radius{3}
-    \def\cyclelist{{"orange", "blue", "red", "green", "pink", "violet"}}
+    \def\cyclelist{{"orange", "blue", "red", "green", "yellow", "cyan", "magenta"}}
     \newcount\cyclecount \cyclecount=-1
     \newcount\ind \ind=-1
     \begin{tikzpicture}[nodes = {font=\sffamily}]
@@ -406,7 +377,7 @@
           \ifx\percent\empty\else               % If \percent is empty, do nothing
             \global\advance\cyclecount by 1     % Advance cyclecount
             \global\advance\ind by 1            % Advance list index
-            \ifnum3<\cyclecount                 % If cyclecount is larger than list
+            \ifnum6<\cyclecount                 % If cyclecount is larger than list
               \global\cyclecount=0              %   reset cyclecount and
               \global\ind=0                     %   reset list index
             \fi
@@ -423,6 +394,12 @@
           \fi
         };
     \end{tikzpicture}
+    \ifsecondargument
+        \caption{#2}
+        \ifthirdargument
+            \label{#3}
+        \fi
+    \fi
 }
 
 %Shortcuts
