Add further version numbers (#20) and improve experiment variables (#19)

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -3,6 +3,7 @@
 \usepackage{enumitem}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{minted} % should be added before scrhack %newfloat now working
+\usepackage{makecell}
 \usepackage{ltablex}
 \usepackage{wrapfig}
 \usepackage{smartdiagram}
