--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -366,7 +366,9 @@
 %Create pie chart
 \newcommand{\piechart}[3]{
     \begin{figure}
+        \cenctering
         \caption{#2}
+
         \par
         \def\angle{0}
         \def\radius{3}
@@ -410,6 +412,7 @@
 \newcommand{\llvmir}{\ac{LLVM-IR}\xspace}
 \newcommand{\llvm}{\ac{LLVM}\xspace}
 \newcommand{\opt}{LLVM Optimizer\xspace}
+\newcommand{\papi}{\ac{PAPI}\xspace}
 \newcommand{\pcp}{\ac{PCP}\xspace}
 \newcommand{\scop}{\ac{SCoP}\xspace}
 \newcommand{\scops}{\ac{SCoP}s\xspace}
