--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -366,7 +366,7 @@
 %Create pie chart
 \newcommand{\piechart}[3]{
     \begin{figure}
-        \cenctering
+        \centering
         \caption{#2}
 
         \par
