Add information to rejection criteria (#2)

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -405,6 +405,7 @@
 
 %Shortcuts
 \newcommand{\cfg}{\ac{CFG}\xspace}
+\newcommand{\undefv}{\texttt{undef}\xspace}
 \newcommand{\generator}{LLVM Code Generator\xspace}
 \newcommand{\gpoly}{\ac{GPoly}\xspace}
 \newcommand{\ir}{\ac{IR}\xspace}
