--- a/references.bib
+++ b/references.bib
@@ -191,3 +191,8 @@
     title={DragonEgg - Using LLVM as a GCC backend},
     url={http://dragonegg.llvm.org/}
 }
+@online{
+    llvmUndef,
+    title={LLVM Language Reference Manual},
+    url={http://llvm.org/docs/LangRef.html#undefined-values}
+}
