Improve description of assertions (#2)

--- a/references.bib
+++ b/references.bib
@@ -196,3 +196,8 @@
     title={LLVM Language Reference Manual},
     url={http://llvm.org/docs/LangRef.html#undefined-values}
 }
+@online{
+    llvmUnreachable,
+    title={LLVM Language Reference Manual},
+    url={https://llvm.org/docs/LangRef.html#i-unreachable}
+}
