Use longtable instead of shrinking the table; Fixes #27 magically...

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -4,7 +4,8 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{minted} % should be added before scrhack %newfloat now working
 \usepackage{makecell}
-\usepackage{ltablex}
+\usepackage{longtable}
+\usepackage{ltxtable}
 \usepackage{wrapfig}
 \usepackage{smartdiagram}
 \usesmartdiagramlibrary{additions}
