Move paragraphes from Tasks to Experiment Settings and extend them

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -83,6 +83,7 @@
         \acro{GPoly}{Graphite polytope description}
         \acro{LLVM}{Low Level Virtual Machine (This is the originally contemplated name \cite{TheNameOfLLVM})}
         \acro{LLVM-IR}{the LLVM Intermediate Representation}
+        \acro{LNT}{LLVM Nightly Test infrastructure}
         \acro{PAPI}{Performance Application Programming Interface}
         \acro{PCP}{Polyhedral Compilation Package}
         \acro{SCoP}{Static Control Part/Program}
