--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -413,6 +413,7 @@
 \newcommand{\linker}{LLVM Linker\xspace}
 \newcommand{\llvmir}{\ac{LLVM-IR}\xspace}
 \newcommand{\llvm}{\ac{LLVM}\xspace}
+\newcommand{\lnt}{\ac{LNT}\xspace}
 \newcommand{\opt}{LLVM Optimizer\xspace}
 \newcommand{\papi}{\ac{PAPI}\xspace}
 \newcommand{\pcp}{\ac{PCP}\xspace}
