--- a/references.bib
+++ b/references.bib
@@ -201,3 +201,18 @@
     title={LLVM Language Reference Manual},
     url={https://llvm.org/docs/LangRef.html#i-unreachable}
 }
+@online{
+    oprofile,
+    title={About OProfile},
+    url={http://oprofile.sourceforge.net/about/}
+}
+@online{
+    gprof,
+    title={GNU gprof},
+    url={https://sourceware.org/binutils/docs/gprof/}
+}
+@online{
+    papi,
+    title={PAPI},
+    url={http://icl.cs.utk.edu/papi/}
+}
