Move versions of used software to separate table

--- a/tables/subjectPrograms.tex
+++ b/tables/subjectPrograms.tex
@@ -1,51 +1,45 @@
 \begin{longtable}{lcC} \toprule
-    \tableheadline{Name}    & \tableheadline{Version} & \tableheadline{Tested Inputs}\\
-    \midrule
-    benchbuild              & \draftnote{git}         & ---\\
-    llvm                    & (04facbb8)              & ---\\
-    clang                   & (89be37b)               & ---\\
-    polly                   & (0fd4fea)               & ---\\
-    polli                   & \draftnote{git}         & ---\\
-    \midrule
+    \tableheadline{Name}     & \tableheadline{Version} & \tableheadline{Tested Inputs}\\
+    \toprule
     \textbf{Benchmarks}\\
-    lnt                     & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
+    lnt                      & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
     %MultiSourceApplications & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
     %MultiSourceBenchmarks   & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
     %SingleSourceBenchmarks  & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
     %SPEC2006                & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
-    Povray                  & (54474e8)               & SPEC2006 input data (set:ref)\\
+    Povray                   & (54474e8)               & SPEC2006 input data (set:ref)\\
     \midrule
     \textbf{Compression}\\
-    7z                      & 9.38.1                  & SPEC2006 input data (set:ref)\\
-    bzip2                   & 1.0.6                   & SPEC2006 input data (set:ref)\\
-    gzip                    & 1.6                     & SPEC2006 input data (set:ref)\\
-    xz                      & 5.2.1                   & SPEC2006 input data (set:ref)\\
+    7z                       & 9.38.1                  & SPEC2006 input data (set:ref)\\
+    bzip2                    & 1.0.6                   & SPEC2006 input data (set:ref)\\
+    gzip                     & 1.6                     & SPEC2006 input data (set:ref)\\
+    xz                       & 5.2.1                   & SPEC2006 input data (set:ref)\\
     \midrule
     \textbf{Database}\\
-    Leveldb                 & (bcd9a8e)               & Integrated benchmark\\
-    SQLite3                 & (3080900)               & leveldb's integrated benchmark\\
+    Leveldb                  & (bcd9a8e)               & Integrated benchmark\\
+    SQLite3                  & (3080900)               & leveldb's integrated benchmark\\
     \midrule
     \textbf{Encryption}\\
-    ccrypt                  & 1.10                    & Integrated tests\\
-    libressl                & 2.1.6\\
+    ccrypt                   & 1.10                    & Integrated tests\\
+    libressl                 & 2.1.6\\
     \midrule
     \textbf{Multimedia}\\
-    ffmpeg                  & 3.1.3                   & fate test-suite\\
-    povRAY                  & (54474e8)               & Integrated sample scenes\\
-    x264                    & (ba24899)               & Integrated benchmark\\
+    ffmpeg                   & 3.1.3                   & fate test-suite\\
+    povRAY                   & (54474e8)               & Integrated sample scenes\\
+    x264                     & (ba24899)               & Integrated benchmark\\
     \midrule
     \textbf{Scientific}\\
-    LAMMPS                  & (9cf43f2)               & Integrated sample problems\\
-    LAPACK                  & 3.2.1                   & Integrated tests\\
-    LINPACK                 & 25.2.1994               & Integrated benchmark\\
+    LAMMPS                   & (9cf43f2)               & Integrated sample problems\\
+    LAPACK                   & 3.2.1                   & Integrated tests\\
+    LINPACK                  & 25.2.1994               & Integrated benchmark\\
     \midrule
     \textbf{Simulation}\\
-    crafty                  & 25.2                    & Integrated benchmark\\
-    lulesh                  & 1.0                     & Integrated benchmark\\
-    lulesh-omp              & 1.0                     & Integrated benchmark\\
+    crafty                   & 25.2                    & Integrated benchmark\\
+    lulesh                   & 1.0                     & Integrated benchmark\\
+    lulesh-omp               & 1.0                     & Integrated benchmark\\
     \midrule
     \textbf{Verification}\\
-    minisat                 & (5dede3a)               & SAT-Race 2008 (reduced)\\
+    minisat                  & (5dede3a)               & SAT-Race 2008 (reduced)\\
     \bottomrule
     \caption[Subject programs]{Subject programs and benchbuild used. (Versions in parenthesis represent short git hashes)}
     \label{tab:subjectPrograms}
