--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -1,5 +1,6 @@
 %Added by Stefan Huber
 \usepackage{comment}
+\usepackage{csvsimple}
 \usepackage{enumitem}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{minted} % should be added before scrhack %newfloat now working
