Renamed Evaluation to Analysis

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -94,7 +94,7 @@
 
 \cleardoublepage
 \part{Evaluation}
-\include{Chapters/Evaluierung}
+\include{Chapters/Analysis}
 % ********************************************************************
 % Backmatter
 %*******************************************************
