Add further chapters

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -95,6 +95,9 @@
 \cleardoublepage
 \part{Evaluation}
 \include{Chapters/Analysis}
+\include{Chapters/Discussion}
+\include{Chapters/RelatedWork}
+\include{Chapters/ConclusionsAndFutureWork}
 % ********************************************************************
 % Backmatter
 %*******************************************************
