First steps adding plots

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -7,6 +7,7 @@
 \usepackage{makecell}
 \usepackage{longtable}
 \usepackage{ltxtable}
+\usepackage[svgpath=svg/,clean]{svg}
 \usepackage{wrapfig}
 \usepackage{smartdiagram}
 \usesmartdiagramlibrary{additions}
