Add further variables

--- a/variables.tex
+++ b/variables.tex
@@ -10,3 +10,6 @@
 %\var[60][\hTwoAbout] %Expected value of Dyncov_s in H_2 (in percent)
 
 \newcommand{\hTwoAbout}{60\%}
+\newcommand{\usefulRatio}{97\%}
+\newcommand{\measurementOverhead}{0.1 \(\mu s\)}
+\newcommand{\overheadIterations}{1000000} %Iterations for determining measurementOverhead
