Prevent lines from being to long

--- a/FrontBackmatter/Bibliography.tex
+++ b/FrontBackmatter/Bibliography.tex
@@ -11,4 +11,6 @@
 \addtocontents{toc}{\protect\vspace{\beforebibskip}} % to have the bib a bit from the rest in the toc
 \addcontentsline{toc}{chapter}{\tocEntry{\bibname}}
 \label{app:bibliography}
-\printbibliography
+\begin{sloppypar}
+    \printbibliography
+\end{sloppypar}
