--- a/references.bib
+++ b/references.bib
@@ -216,3 +216,8 @@
     title={PAPI},
     url={http://icl.cs.utk.edu/papi/}
 }
+@online{
+    slurm,
+    title={Slurm Workload Manager},
+    url={https://slurm.schedmd.com/quickstart.html}
+}
