--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -333,7 +333,7 @@
     nonLlvmIrPath/.style = {defaultPath, color=nonLlvmIrColor}
 }
 
-\newcommand{\tikzlegend}{\xspace(The green nodes and arrows are working with/based on LLVM-IR)\xspace}
+\newcommand{\tikzlegend}{\xspace(The green nodes and arrows are working with/based on \llvmir)\xspace}
 
 %Has to be loaded after graphicx
 \usepackage[svgpath=svg/,clean]{svg}
