Add check of measurement overhead

--- a/variables.tex
+++ b/variables.tex
@@ -11,5 +11,6 @@
 
 \newcommand{\hTwoAbout}{60\%}
 \newcommand{\usefulRatio}{97\%}
-\newcommand{\measurementOverhead}{0.1 \(\mu s\)}
+\newcommand{\measurementOverhead}{2.29 s}
+\newcommand{\overheadRounds}{10}
 \newcommand{\overheadIterations}{1000000} %Iterations for determining measurementOverhead
