--- a/variables.tex
+++ b/variables.tex
@@ -9,8 +9,8 @@
 %Not working?
 %\var[60][\hTwoAbout] %Expected value of Dyncov_s in H_2 (in percent)
 
-\newcommand{\hTwoAbout}{60\%}
-\newcommand{\usefulRatio}{97\%}
-\newcommand{\measurementOverhead}{2.29 s}
-\newcommand{\overheadRounds}{10}
-\newcommand{\overheadIterations}{1000000} %Iterations for determining measurementOverhead
+\newcommand{\hTwoAbout}{60\%\xspace}
+\newcommand{\usefulRatio}{\draftnote{97}\%\xspace}
+\newcommand{\measurementOverhead}{2.29 s\xspace}
+\newcommand{\overheadRounds}{10\xspace}
+\newcommand{\overheadIterations}{1000000\xspace} %Iterations for determining measurementOverhead
