--- a/variables.tex
+++ b/variables.tex
@@ -9,6 +9,9 @@
 %Not working?
 %\var[60][\hTwoAbout] %Expected value of Dyncov_s in H_2 (in percent)
 
+\newcommand{\dyncovp}{\(DynCov_p\)\xspace}
+\newcommand{\dyncovs}{\(DynCov_s\)\xspace}
+
 \newcommand{\hTwoAbout}{60\%\xspace}
 \newcommand{\usefulRatio}{\draftnote{97}\%\xspace}
 \newcommand{\measurementOverhead}{2.29 s\xspace}
