Extend and improve analysis

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -81,6 +81,7 @@
         \acro{CFG}{Control Flow Graph}
         \acro{IR}{Intermediate Representation}
         \acro{GPoly}{Graphite polytope description}
+        \acro{JIT}{Just in time}
         \acro{LLVM}{Low Level Virtual Machine (This is the originally contemplated name \cite{TheNameOfLLVM})}
         \acro{LLVM-IR}{the LLVM Intermediate Representation}
         \acro{LNT}{LLVM Nightly Test infrastructure}
