--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -383,6 +383,7 @@
 \newcommand{\undefv}{\texttt{undef}\xspace}
 \newcommand{\generator}{LLVM Code Generator\xspace}
 \newcommand{\gpoly}{\ac{GPoly}\xspace}
+\newcommand{\jit}{\ac{JIT}\xspace}
 \newcommand{\ir}{\ac{IR}\xspace}
 \newcommand{\linker}{LLVM Linker\xspace}
 \newcommand{\llvmir}{\ac{LLVM-IR}\xspace}
