--- a/references.bib
+++ b/references.bib
@@ -221,3 +221,18 @@
     title={Slurm Workload Manager},
     url={https://slurm.schedmd.com/quickstart.html}
 }
+@online{
+    shapiroWilkTest,
+    title={Shapiro-Wilk-Test},
+    url={http://www.statistics4u.info/fundstat_germ/ee_shapiro_wilk_test.html}
+}
+@online{
+    ttest,
+    title={The T-Test},
+    url={http://socialresearchmethods.net/kb/stat_t.php}
+}
+@online{
+    utest,
+    title={Mann-Whitney-U-Test},
+    url={http://www.methodenberatung.uzh.ch/de/datenanalyse/unterschiede/zentral/mann.html}
+}
