--- a/variables.tex
+++ b/variables.tex
@@ -17,3 +17,4 @@
 \newcommand{\measurementOverhead}{2.29 s\xspace}
 \newcommand{\overheadRounds}{10\xspace}
 \newcommand{\overheadIterations}{1000000\xspace} %Iterations for determining measurementOverhead
+\newcommand{\utestPValue}{0.3753312\xspace}
